Added option for authentication only

--- a/src/config.json
+++ b/src/config.json
@@ -9,6 +9,7 @@
     },
     "Radius":
     {
+      "AuthenticationOnly": false,
       "Authentication":
       {
         "Server": "10.10.10.124:1812",
